# categories

./: .travis.yml  CHANGELOG  CHANGELOG.markdown  LICENSE  Makefile  README.markdown  categories.cabal  category-extras.cabal  ctl.cabal  stack-nightly.yaml
.stack-work/install/2d5b67be/doc/categories-2/: LICENSE
.stack-work/install/2d5b67be/flag-cache/: categories-2-HFBisk2LKW3Iplpckpq30G
.stack-work/install/2d5b67be/pkgdb/: categories-2-HFBisk2LKW3Iplpckpq30G.conf  package.cache
Control/: Dyad.hs
Control/Applicative/: Parameterized.hs
Control/Arrow/: BiKleisli.hs
Control/Categorical/: Bifunctor.hs  Functor.hs  Object.hs
Control/Category/: Associative.hs  Braided.hs  Cartesian.hs  Discrete.hs  Distributive.hs  Dual.hs  Hask.hs  Monoidal.hs  Object.hs
Control/Category/Cartesian/: Closed.hs
Control/Comonad/: Context.hs  Exponent.hs  Fix.hs  HigherOrder.hs  Memo.hs  Reader.hs  Trans.hs  Zipper.hs
Control/Comonad/Context/: Class.hs
Control/Comonad/Reader/: Class.hs
Control/Functor/: Abides.hs  Adjunction.hs  Categorical.hs  Cone.hs  Contra.hs  Derivative.hs  Exponential.hs  Fix.hs  Full.hs  Lambek.hs  Representable.hs  Strong.hs  Yoneda.hs  Zap.hs  Zip.hs
Control/Functor/Algebra/: Elgot.hs
Control/Functor/Combinators/: Flip.hs  Lift.hs  Of.hs
Control/Functor/HigherOrder/: Composition.hs
Control/Functor/Internal/: Adjunction.hs
Control/Monad/: Either.hs  Free.hs  Ideal.hs  Indexed.hs
Control/Monad/Indexed/: Cont.hs  State.hs  Trans.hs
Control/Morphism/: Ana.hs  Apo.hs  Build.hs  Chrono.hs  Dyna.hs  Exo.hs  Futu.hs  Histo.hs  Hylo.hs
Control/Morphism/Meta/: Erwig.hs
old/src/Control/Categorical/: Functor.hs
old/src/Control/Category/: Discrete.hs  Distributive.hs  Dual.hs
old/src/Control/Category/Cartesian/: Closed.hs
pre-6.9/Control/: Category.hs
src/Control/: Allegory.hs  Bifunctor.hs  Comonad.hs  Functor.hs
src/Control/Applicative/: Parameterized.hs
src/Control/Arrow/: BiKleisli.hs  CoKleisli.hs
src/Control/Bifunctor/: Associative.hs  Biff.hs  Braided.hs  Composition.hs  Constant.hs  Either.hs  Fix.hs  Functor.hs  HigherOrder.hs  Instances.hs  Monoidal.hs  Pair.hs  Pointed.hs  Swap.hs
src/Control/Categorical/: Bifunctor.hs  Category.hs  Functor.hs  Object.hs
src/Control/Category/: Associative.hs  Braided.hs  Cartesian.hs  Closed.hs  Discrete.hs  Distributive.hs  Dual.hs  Hask.hs  Monoidal.hs  Object.hs  Small.hs
src/Control/Category/Cartesian/: Closed.hs
src/Control/Comonad/: Cofree.hs  Coideal.hs  Composition.hs  Context.hs  Density.hs  Fix.hs  HigherOrder.hs  Identity.hs  Indexed.hs  Instances.hs  Parameterized.hs  Pointer.hs  Reader.hs  State.hs  Stream.hs  Supply.hs  Zipper.hs
src/Control/Comonad/Cofree/: Alt.hs
src/Control/Comonad/Context/: Class.hs
src/Control/Comonad/Parameterized/: Class.hs
src/Control/Comonad/Reader/: Class.hs
src/Control/Comonad/State/: Class.hs
src/Control/Functor/: Adjunction.hs  Algebra.hs  Bifunctor.hs  Categorical.hs  Combinators.hs  Composition.hs  Constant.hs  Contravariant.hs  End.hs  Exponential.hs  Extras.hs  Fix.hs  Full.hs  HigherOrder.hs  Ideal.hs  Indexed.hs  Instances.hs  KanExtension.hs  Lambek.hs  Limit.hs  Pointed.hs  Representable.hs  Strong.hs  Yoneda.hs  Zap.hs  Zip.hs
src/Control/Functor/Adjunction/: HigherOrder.hs
src/Control/Functor/Algebra/: Elgot.hs
src/Control/Functor/Combinators/: Biff.hs  Const.hs  Flip.hs  Join.hs  Lift.hs  Of.hs
src/Control/Functor/Composition/: Class.hs
src/Control/Functor/HigherOrder/: Composition.hs
src/Control/Functor/Indexed/: Lift.hs
src/Control/Functor/Internal/: Adjunction.hs  Ideal.hs
src/Control/Functor/KanExtension/: Interpreter.hs
src/Control/Functor/Pointed/: Composition.hs
src/Control/Monad/: Categorical.hs  Codensity.hs  Composition.hs  Either.hs  Free.hs  HigherOrder.hs  Hyper.hs  Ideal.hs  Indexed.hs  KanExtension.hs  Parameterized.hs
src/Control/Monad/Indexed/: Cont.hs  Fix.hs  State.hs
src/Control/Monad/Parameterized/: Class.hs
src/Control/Morphism/: Ana.hs  Apo.hs  Build.hs  Cata.hs  Chrono.hs  Destroy.hs  Dyna.hs  Futu.hs  Histo.hs  Hylo.hs  Meta.hs  Para.hs  Postpro.hs  Prepro.hs  Span.hs  Synchro.hs  Universal.hs  Zygo.hs
src/Control/Morphism/Meta/: Gibbons.hs
src/Data/: Void.hs
src/Math/: Category.hs  Functor.hs  Groupoid.hs  Monad.hs  Multicategory.hs  Operad.hs  Rec.hs
src/Math/Category/: Dual.hs  Product.hs  Sum.hs
src/Math/Functor/: Faithful.hs
src/Math/Monad/: Atkey.hs
src/Math/Multicategory/: Free.hs
src/Math/Polycategory/: PRO.hs
src/Math/Rec/: All.hs
