name:          categories
category:      Control
version:       3.0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/categories
bug-reports:   http://github.com/ekmett/categories/issues
synopsis:      Categories
copyright:     Copyright (C) 2008-2010, Edward A. Kmett
description:   Categories
build-type:    Simple
tested-with:   GHC == 7.4.1, GHC == 7.6.1
extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  README.markdown
  CHANGELOG.markdown

flag Optimize
  description: Enable optimizations
  default:     False

library
  default-language: Haskell2010
  default-extensions: CPP
  other-extensions:
    MultiParamTypeClasses
    FunctionalDependencies
    FlexibleContexts
    FlexibleInstances
    UndecidableInstances
    TypeOperators
    TypeFamilies
    GADTs

  exposed-modules:
    Control.Categorical.Bifunctor
    Control.Categorical.Functor
    Control.Categorical.Object
    Control.Category.Braided
    Control.Category.Cartesian
    Control.Category.Closed
    Control.Category.Discrete
    Control.Category.Distributive
    Control.Category.Hask
    Control.Category.Monoidal


--    Control.Category.Cartesian.Closed,

  build-depends:
    base >= 4       && < 5,
    contravariant,
    void >= 0.5.4.2 && < 1

  hs-source-dirs: src
  ghc-options: -Wall

  if flag(Optimize)
    ghc-options: -funbox-strict-fields -O2
