name:          categories
category:      Control
version:       2
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/categories
bug-reports:   http://github.com/ekmett/categories/issues
synopsis:      Categories
copyright:     Copyright (C) 2008-2015, Edward A. Kmett
description:   Categories
build-type:    Simple
tested-with:   GHC == 7.8.4, GHC == 7.10.1
extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  README.markdown
  CHANGELOG.markdown

library
  default-language: Haskell2010

  exposed-modules:
    Math.Category
    Math.Category.Product
    Math.Category.Sum
    Math.Functor
    Math.Groupoid
    Math.Multicategory
    Math.Multicategory.Free
    Math.Rec

  build-depends:
    base        >= 4.7.0.1 && < 5,
    constraints >= 0.5.1   && < 1,
    void        >= 0.5.4.2 && < 1

  hs-source-dirs: src
  ghc-options: -Wall -funbox-strict-fields -O2
